Fix share bar z-index.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -351,9 +351,9 @@ object, embed, video, iframe {
                         height: 38px;
                         left: 0;
                         position: absolute;
-                        bottom: 15px;
+                        bottom: 14px;
                         width: 100%;
-                        z-index: 10;
+                        z-index: 200;
 
                         button {
                             background: none;
@@ -945,7 +945,7 @@ object, embed, video, iframe {
                 }
 
                 @media screen and (min-width: 700px) {
-                    height: 346px;
+                    height: 347px;
                 }
 
                 ul.comment-stream {
